# expected

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Conan.cmake  StaticAnalyzers.cmake
include/: expected.hpp
include/rd/: expected.hpp
test/: CMakeLists.txt  bad_expected_access_test.cpp  exepcted_monadic_edge_cases_test.cpp  expected_assignment_test.cpp  expected_constructor_test.cpp  expected_equality_test.cpp  expected_modifier_test.cpp  expected_monadic_test.cpp  expected_observer_test.cpp  expected_swap_test.cpp  expected_test.cpp  expected_void_assignment_test.cpp  expected_void_constructor_test.cpp  expected_void_equality_test.cpp  expected_void_modifier_test.cpp  expected_void_monadic_test.cpp  expected_void_observer_test.cpp  expected_void_swap_test.cpp  int_to_str.hpp  test_include.hpp  test_runner.cpp  unexpected_test.cpp
